--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -150,6 +150,12 @@ html {
   text-shadow: 0px 0px 20px #000;
 }
 
+.text a{
+  text-shadow:none;
+  position:relative;
+  top:150px;
+}
+
 .text > h1 {
   margin: -10px 0 0 0;
   padding: 0;
