--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ ul {
     padding: 0;
 }
 p {
-    font-size: 20px;
+    font-size: 12px;
     /* height: 900px; */
 }
 span {
@@ -1061,7 +1061,7 @@ ul.skills {
 }
 
 div[data-anchor="home"] .fp-tableCell{
-    background: rgba(72, 72, 72, 0.5);
+    background: rgba(72, 72, 72, 0);
 }
 
 #menu{
@@ -1080,11 +1080,12 @@ div[data-anchor="home"] .fp-tableCell{
 }
 
 .paragraph{
-    font-size: 20px;
+    font-size: 12px;
 }
 
 .services-content{
-    max-height: 768px;
+    min-height: 768px !important;
+    /* max-height: 768px; */
     overflow: scroll;
 }
 
